--- a/Koting/Koting/View/MyMeetingList.storyboard
+++ b/Koting/Koting/View/MyMeetingList.storyboard
@@ -27,7 +27,7 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJv-9N-WGN">
-                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                                 <connections>
                                     <segue destination="RTS-yK-2qb" kind="embed" id="L43-Al-S3h"/>
                                 </connections>
@@ -41,7 +41,7 @@
                             <constraint firstItem="uJv-9N-WGN" firstAttribute="bottom" secondItem="GtF-vK-Shv" secondAttribute="bottom" id="Rmv-ep-N3t"/>
                             <constraint firstItem="uJv-9N-WGN" firstAttribute="trailing" secondItem="GtF-vK-Shv" secondAttribute="trailing" id="Wqm-qo-ovA"/>
                             <constraint firstItem="GtF-vK-Shv" firstAttribute="trailing" secondItem="lDP-Bv-jLZ" secondAttribute="trailing" id="da2-WK-Smg"/>
-                            <constraint firstItem="uJv-9N-WGN" firstAttribute="top" secondItem="lDP-Bv-jLZ" secondAttribute="bottom" constant="10" id="oYH-dy-nbM"/>
+                            <constraint firstItem="uJv-9N-WGN" firstAttribute="top" secondItem="lDP-Bv-jLZ" secondAttribute="bottom" id="oYH-dy-nbM"/>
                             <constraint firstItem="uJv-9N-WGN" firstAttribute="leading" secondItem="GtF-vK-Shv" secondAttribute="leading" id="spJ-EL-xru"/>
                         </constraints>
                     </view>
@@ -70,7 +70,7 @@
             <objects>
                 <viewController id="RTS-yK-2qb" customClass="PagingContentViewController" customModule="PagingKit" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XUY-LE-wKt">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="s1S-vv-xew"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -377,7 +377,7 @@
                                                     <rect key="frame" x="126" y="150" width="123" height="28"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="pageIndicatorTintColor" systemColor="systemGrayColor"/>
-                                                    <color key="currentPageIndicatorTintColor" systemColor="systemTealColor"/>
+                                                    <color key="currentPageIndicatorTintColor" red="0.60618412494659424" green="0.17688676714897156" blue="0.92973774671554565" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </pageControl>
                                             </subviews>
                                             <constraints>
@@ -518,9 +518,6 @@
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
