--- a/Koting/Koting/View/Base.lproj/LaunchScreen.storyboard
+++ b/Koting/Koting/View/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,36 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="FPX-Vs-n62">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Koting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMJ-bG-GAb">
                                 <rect key="frame" x="0.0" y="106" width="375" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="FPX-Vs-n62">
+                                <rect key="frame" x="0.0" y="112" width="376" height="443"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="443" id="ONb-rg-oLA"/>
+                                    <constraint firstAttribute="width" constant="376" id="oeA-jm-Lv2"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FPX-Vs-n62" secondAttribute="bottom" id="G8u-2i-sVo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DMJ-bG-GAb" secondAttribute="trailing" id="K6x-G0-Axv"/>
                             <constraint firstItem="DMJ-bG-GAb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="106" id="Xlg-cq-NHx"/>
-                            <constraint firstItem="FPX-Vs-n62" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h5g-GF-tah"/>
-                            <constraint firstItem="FPX-Vs-n62" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pxL-CS-kEd"/>
+                            <constraint firstItem="FPX-Vs-n62" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nIK-z9-QrG"/>
                             <constraint firstItem="DMJ-bG-GAb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qbt-T0-sH1"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FPX-Vs-n62" secondAttribute="trailing" id="zRh-43-zEt"/>
+                            <constraint firstItem="FPX-Vs-n62" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="shX-oZ-Ld6"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
-        <image name="image" width="1000" height="1000"/>
+        <image name="Launch_Icon" width="60" height="60"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
