--- a/api-server/demo/src/main/resources/static/css/me.css
+++ b/api-server/demo/src/main/resources/static/css/me.css
@@ -1,11 +1,3 @@
-/*
-Template Name: Me
-Author: One Page Love
-Author URI: https://onepagelove.com
-Template URI: https://onepagelove.com/me
-Description: Me is a slick, personal layout for any individual wanting a minimal online presence. Features include a big background image, logo, bio and icons.
-Version: 0.2.2
-*/
 /* -- CSS Reset -- */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
 html, body, div, span, applet, object, iframe,
@@ -73,20 +65,6 @@ body {
   background-color: #FFFFFF;
   border-style: none; }
 
-body,
-p,
-a,
-a:hover {
-  color: #000000; }
-
-a,
-a:hover {
-  text-decoration: none;
-  border: none;
-  border-style: none;
-  box-shadow: none; }
-
-/* -- Content -- */
 @-webkit-keyframes fadein {
   from {
     opacity: 0; }
@@ -98,203 +76,69 @@ a:hover {
   to {
     opacity: 1; } }
 
-html {
-  background-color: #141414; }
+.bio {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  flex: 1 1 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-animation: fadein 4s;
+  animation: fadein 4s;
+  letter-spacing: -1px;
+  max-width: 100%; }
+@media (max-width: 800px) {
+  .bio {
+    max-width: none; } }
+.bio a {
+  color: #CCCCCC;
+  -webkit-transition: 1s;
+  transition: 1s; }
+.bio a:hover {
+  color: #FFFFFF;
+  -webkit-transition: 0.1s;
+  transition: 0.1s; }
 
 body.page-template-page-fullsingle-me {
   height: 100vh;
   background-color: #141414;
   font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-weight: 1000;
   font-size: 45px;
+  font-weight: bold;
   line-height: 60px;
-  letter-spacing: -0.5px;
-  color: #999999;
-  background-image: url("../images/background.jpg");
-  background-position: center center;
-  background-size: cover; }
-  body.page-template-page-fullsingle-me p {
-    margin-bottom: 28px;
-    color: #999999; }
-    @media (max-width: 800px) {
-      body.page-template-page-fullsingle-me p {
-        font-size: 32px;
-        line-height: 40px; } }
+  color: #FFFFFF; }
 
 .fs-me {
   padding: 10vh 10vw;
+  text-align: center;
+  overflow: hidden;
+  position: absolute; }
+.fs-me .me-content {
+  width: 162.7vh;
+  height: 80vh;
+  display: flex;}
+
+body.page-template-page-fullsingle-me.me-video .me-video-container {
   overflow: hidden;
   position: absolute;
-  z-index: 1000; }
-  @media (max-width: 500px) {
-    .fs-me {
-      padding: 5vh 5vw;
-      text-align: center; } }
-  .fs-me .me-content {
-    height: 80vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-            flex-direction: column; }
-    @media (max-width: 500px) {
-      .fs-me .me-content {
-        height: 90vh; } }
-
-.logo {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-          flex: 1 1 auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-          flex-direction: column;
-  -webkit-align-self: left;
-          align-self: left;
-  -webkit-animation: fadein 2s;
-          animation: fadein 2s; }
-  @media (max-width: 500px) {
-    .logo {
-      -webkit-align-self: center;
-              align-self: center; } }
-  .logo img {
-    max-width: 165px;
-    height: auto; }
-
-.bio {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-          flex: 1 1 auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-          justify-content: center;
-  -webkit-animation: fadein 4s;
-          animation: fadein 4s;
-  letter-spacing: -1px;
-  max-width: 66%; }
-  @media (max-width: 800px) {
-    .bio {
-      max-width: none; } }
-  .bio a {
-    color: #CCCCCC;
-    -webkit-transition: 1s;
-    transition: 1s; }
-    .bio a:hover {
-      color: #FFFFFF;
-      -webkit-transition: 0.1s;
-      transition: 0.1s; }
-
-.network {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-          flex: 1 1 auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-          flex-direction: column;
-  -webkit-animation: fadein 6s;
-          animation: fadein 6s;
-  margin-top: auto; }
-  .network ul {
-    -webkit-animation: fadein 6s;
-            animation: fadein 6s;
-    margin-top: auto; }
-    .network ul li {
-      display: inline-block;
-      margin-right: 8px; }
-      .network ul li a {
-        display: inline-block;
-        width: 30px;
-        height: 30px;
-        cursor: pointer; }
-        .network ul li a .svg-icon {
-          padding: 4px;
-          width: 22px;
-          height: 22px;
-          margin: 0;
-          display: block; }
-        .network ul li a .svg-icon path,
-        .network ul li a .svg-icon polygon,
-        .network ul li a .svg-icon rect {
-          fill: #999999;
-          -webkit-transition: 1s;
-          transition: 1s; }
-        .network ul li a .svg-icon circle {
-          stroke: #999999;
-          stroke-width: 1; }
-      .network ul li a:hover .svg-icon path,
-      .network ul li a:hover .svg-icon polygon,
-      .network ul li a:hover .svg-icon rect {
-        fill: #FFFFFF;
-        -webkit-transition: 0.1s;
-        transition: 0.1s; }
-
-.credit {
-  font-size: 12px;
-  line-height: 14px;
-  margin-bottom: 0;
-  -webkit-animation: fadein 8s;
-          animation: fadein 8s; }
-  .credit p.copyright {
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: 400;
-    opacity: 0.4; }
-    .credit p.copyright a {
-      color: #999999; }
-
-body.page-template-page-fullsingle-me.me-video {
-  background-image: none; }
-  body.page-template-page-fullsingle-me.me-video .me-video-container {
-    overflow: hidden;
-    position: absolute;
-    z-index: 0;
-    width: 100vw;
-    height: 100vh; }
-  body.page-template-page-fullsingle-me.me-video video.video {
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: 50% 50%;
-       object-position: 50% 50%;
-    width: 100%;
-    height: 100%; }
-  body.page-template-page-fullsingle-me.me-video .video-wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); }
-  body.page-template-page-fullsingle-me.me-video .video-container {
-    position: relative;
-    overflow: hidden;
-    height: 56.25vw;
-    width: 100vw; }
-    @media (max-aspect-ratio: 16 / 9) {
-      body.page-template-page-fullsingle-me.me-video .video-container {
-        height: 100vh;
-        width: 177.7777777778vh; } }
-  body.page-template-page-fullsingle-me.me-video .video-container iframe,
-  body.page-template-page-fullsingle-me.me-video .video-container object,
-  body.page-template-page-fullsingle-me.me-video .video-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
-  body.page-template-page-fullsingle-me.me-video .fs-me {
-    background-color: rgba(0, 0, 0, 0.6); }
+  z-index: 0;
+  width: 100vw;
+  height: 100vh; }
+body.page-template-page-fullsingle-me.me-video video.video {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
+  width: 100%;
+  height: 100%; }
+body.page-template-page-fullsingle-me.me-video .fs-me {
+  background-color: rgba(0, 0, 0, 0.6); }
