--- a/api-server/demo/src/main/resources/templates/index.html
+++ b/api-server/demo/src/main/resources/templates/index.html
@@ -27,7 +27,14 @@
 	<div class="me-content">
 		<div class="bio" style="font-weight: 700; font-size: 45pt; top: 40%; left: 43%; position: absolute;">
 			<p style="margin-bottom: 15px">미팅이 필요한</p>
-			<p>모든 순간, <strong style="color: #a173ff;">코팅</strong></p>
+			<p>모든 순간, <strong style="color: #5D11F7;">코팅</strong></p>
+<!--			<p>모든 순간, <strong style="color: #a173ff;">코팅</strong></p>-->
+		</div>
+
+		<div class="box">
+			<div style="font-size: 22px">
+				<a href="https://github.com/team-bB" target="_blank"> 코팅 앱 다운로드  </a>
+			</div>
 		</div>
 
 </div>
